@@ -1,6 +1,7 @@
 package datawave.query.ancestor;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.util.Collection;
 import java.util.Collections;
@@ -187,7 +188,7 @@ public class AncestorQueryIterator extends QueryIterator {
                     final Class<?> fClass = Class.forName(fClassName);
                     if (Predicate.class.isAssignableFrom(fClass)) {
                         // Create and configure the predicate
-                        final Predicate p = (Predicate) fClass.newInstance();
+                        final Predicate p = (Predicate) fClass.getDeclaredConstructor().newInstance();
                         if (p instanceof ConfiguredPredicate) {
                             ((ConfiguredPredicate) p).configure(options);
                         }
@@ -208,7 +209,7 @@ public class AncestorQueryIterator extends QueryIterator {
                         return fieldIndexKeyDataTypeFilter;
                     }
                 }
-            } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+            } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                 log.error("Could not instantiate postprocessing chain!", e);
             }
         }
